--- a/arch/arm/boot/dts/qcom/msm8939-cpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-cpu.dtsi
@@ -51,12 +51,12 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x100>;
 			enable-method = "qcom,arm-cortex-acc";
-			qcom,acc = <&acc0>;
+			qcom,limits-info = <&mitigation_profile0>;
+			qcom,ea = <&ea0>;
 			next-level-cache = <&L2_1>;
 			L2_1: l2-cache {
 			      compatible = "arm,arch-cache";
 			      cache-level = <2>;
-			      power-domain = <&l2ccc_1>;
 			};
 		};
 
@@ -65,7 +65,8 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x101>;
 			enable-method = "qcom,arm-cortex-acc";
-			qcom,acc = <&acc1>;
+			qcom,limits-info = <&mitigation_profile1>;
+			qcom,ea = <&ea1>;
 			next-level-cache = <&L2_1>;
 		};
 
@@ -74,7 +75,8 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x102>;
 			enable-method = "qcom,arm-cortex-acc";
-			qcom,acc = <&acc2>;
+			qcom,limits-info = <&mitigation_profile2>;
+			qcom,ea = <&ea2>;
 			next-level-cache = <&L2_1>;
 		};
 
@@ -83,7 +85,8 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x103>;
 			enable-method = "qcom,arm-cortex-acc";
-			qcom,acc = <&acc3>;
+			qcom,limits-info = <&mitigation_profile3>;
+			qcom,ea = <&ea3>;
 			next-level-cache = <&L2_1>;
 		};
 
@@ -92,12 +95,12 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x0>;
 			enable-method = "qcom,arm-cortex-acc";
-			qcom,acc = <&acc4>;
+			qcom,limits-info = <&mitigation_profile4>;
+			qcom,ea = <&ea4>;
 			next-level-cache = <&L2_0>;
 			L2_0: l2-cache {
 			      compatible = "arm,arch-cache";
 			      cache-level = <2>;
-			      power-domain = <&l2ccc_0>;
 			};
 		};
 
@@ -106,7 +109,8 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x1>;
 			enable-method = "qcom,arm-cortex-acc";
-			qcom,acc = <&acc5>;
+			qcom,limits-info = <&mitigation_profile4>;
+			qcom,ea = <&ea5>;
 			next-level-cache = <&L2_0>;
 		};
 
@@ -115,7 +119,8 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x2>;
 			enable-method = "qcom,arm-cortex-acc";
-			qcom,acc = <&acc6>;
+			qcom,limits-info = <&mitigation_profile4>;
+			qcom,ea = <&ea6>;
 			next-level-cache = <&L2_0>;
 		};
 
@@ -124,60 +129,50 @@
 			compatible = "arm,cortex-a53";
 			reg = <0x3>;
 			enable-method = "qcom,arm-cortex-acc";
-			qcom,acc = <&acc7>;
+			qcom,limits-info = <&mitigation_profile4>;
+			qcom,ea = <&ea7>;
 			next-level-cache = <&L2_0>;
 		};
 	};
 };
 
 &soc {
-	l2ccc_0: clock-controller@b111000 {
-		compatible = "qcom,8916-l2ccc";
-		reg = <0x0b111000 0x1000>;
-	};
+	qcom,msm-core@a0000 {
+		compatible = "qcom,apss-core-ea";
+		reg = <0xa0000 0x1000>;
+		qcom,low-hyst-temp = <10>;
+		qcom,high-hyst-temp = <5>;
+		
+		ea0: ea0 {
+			sensor = <&sensor_information5>;
+		};
 
-	l2ccc_1: clock-controller@b011000 {
-		compatible = "qcom,8916-l2ccc";
-		reg = <0x0b011000 0x1000>;
-	};
+		ea1: ea1 {
+			sensor = <&sensor_information6>;
+		};
 
-	acc0:clock-controller@b088000 {
-		compatible = "qcom,arm-cortex-acc";
-		reg = <0x0b088000 0x1000>;
-	};
+		ea2: ea2 {
+			sensor = <&sensor_information7>;
+		};
 
-	acc1:clock-controller@b098000 {
-		compatible = "qcom,arm-cortex-acc";
-		reg = <0x0b098000 0x1000>;
-	};
+		ea3: ea3 {
+			sensor = <&sensor_information8>;
+		};
 
-	acc2:clock-controller@b0a8000 {
-		compatible = "qcom,arm-cortex-acc";
-		reg = <0x0b0a8000 0x1000>;
-	};
+		ea4: ea4 {
+			sensor = <&sensor_information9>;
+		};
 
-	acc3:clock-controller@b0b8000 {
-		compatible = "qcom,arm-cortex-acc";
-		reg = <0x0b0b8000 0x1000>;
-	};
+		ea5: ea5 {
+			sensor = <&sensor_information9>;
+		};
 
-	acc4:clock-controller@b188000 {
-		compatible = "qcom,arm-cortex-acc";
-		reg = <0x0b188000 0x1000>;
-	};
+		ea6: ea6 {
+			sensor = <&sensor_information9>;
+		};
 
-	acc5:clock-controller@b198000 {
-		compatible = "qcom,arm-cortex-acc";
-		reg = <0x0b198000 0x1000>;
-	};
-
-	acc6:clock-controller@b1a8000 {
-		compatible = "qcom,arm-cortex-acc";
-		reg = <0x0b1a8000 0x1000>;
-	};
-
-	acc7:clock-controller@b1b8000 {
-		compatible = "qcom,arm-cortex-acc";
-		reg = <0x0b1b8000 0x1000>;
+		ea7: ea7 {
+			sensor = <&sensor_information9>;
+		};
 	};
 };
