--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -289,6 +289,7 @@ CONFIG_BATTERY_BCL=y
 CONFIG_POWER_RESET_MSM=y
 # CONFIG_MSM_DLOAD_MODE is not set
 CONFIG_MSM_PM=y
+CONFIG_APSS_CORE_EA=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_TSENS8974=y
